# applyme-auto-submitter

./: .dockerignore  .gitignore  Dockerfile  README.md  answers.md  apply_bot.py  main.py  pyproject.toml  requirements.txt
applyme/: __init__.py  __main__.py  api.py  cli.py  config.py  lever.py  models.py  profile.py  sample_data.py  service.py  templates.py
helpers/: docx_to_pdf.py  parse_docx.py
resources/: profile_candidate.docx  resume.docx  values.py
resources/result_report/: results.json
resourses/: resourses.py
tests/: test_api.py  test_lever.py  test_profile.py
