[project]
name = "applyme-auto-submitter"
version = "0.1.0"
description = "SeleniumBase (UC mode) bot that auto-fills and submits Lever job applications from a candidate profile."
authors = [
    { name = "Viktoriia Nesterenko", email = "vicway.nesterenko@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "seleniumbase (>=4.49.7,<5.0.0)",
    "selenium (>=4.44.0,<5.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "reportlab (>=4.5.1,<5.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "2captcha-python (>=2.0.7,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
